[gd_scene load_steps=9 format=3 uid="uid://l0xqpwyacq78"]

[ext_resource type="Script" path="res://item.gd" id="1_hygqk"]
[ext_resource type="Texture2D" uid="uid://bsku5142jc40t" path="res://shield.svg" id="2_p8dgv"]
[ext_resource type="Texture2D" uid="uid://cwove0lumqbkc" path="res://missile.svg" id="3_ei17f"]
[ext_resource type="Texture2D" uid="uid://csg46ufemmqdv" path="res://Lives1.png" id="4_l7as3"]
[ext_resource type="AudioStream" uid="uid://gioxdmoovpfi" path="res://Audio/powerUp.wav" id="5_ckyxb"]
[ext_resource type="AudioStream" uid="uid://7l6sxfauihhc" path="res://Audio/laserShoot.wav" id="6_41i5f"]
[ext_resource type="AudioStream" uid="uid://dmf1jhj8ucd7v" path="res://Audio/lifeUp.wav" id="7_ehd1w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_onqv1"]
radius = 17.0

[node name="Item" type="RigidBody2D"]
collision_mask = 0
mass = 0.01
gravity_scale = 0.0
linear_damp_mode = 1
script = ExtResource("1_hygqk")

[node name="ShieldSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(-9.53674e-07, -5.96046e-08)
rotation = 3.14159
scale = Vector2(0.05, 0.05)
texture = ExtResource("2_p8dgv")

[node name="MissileSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(-1, 2)
rotation = 3.14159
scale = Vector2(0.05, 0.05)
texture = ExtResource("3_ei17f")

[node name="HeartSprite" type="Sprite2D" parent="."]
position = Vector2(-41, -5)
rotation = -3.14159
scale = Vector2(1.3, 1.3)
texture = ExtResource("4_l7as3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_onqv1")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="." groups=["items"]]

[node name="ShieldAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ckyxb")

[node name="MissileAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_41i5f")

[node name="HeartAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ehd1w")

[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
